compiler/testData/diagnostics/tests/thisAndSuper/superInExtensionFunction.kt
fun String.f() {
    <!SUPER_NOT_AVAILABLE!>super@f<!>.<!DEBUG_INFO_MISSING_UNRESOLVED!>compareTo<!>("")
    <!SUPER_NOT_AVAILABLE!>super<!>.<!DEBUG_INFO_MISSING_UNRESOLVED!>compareTo<!>("")
}